assets/featured-collection.css
.featured-collection-wrapper {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: max-content;
    padding: 50px 0px;
    user-select: none;
    background-color: #0d3135;
    
}

.featured-collection {
    width: 80dvw;
    max-width: 1400px;
    height: max-content;
    display: flex;
    flex-direction: column;
    gap: 2%;
    flex-shrink: 0;
    position: relative;
}

.collection-image {
    width: 100%;
    height: max-content;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 30px;
}


.collection-name {
    padding: 0px;
    margin: 0px;
    color: white;
    text-align: center;
    width: 100%;
    height: max-content;
    z-index: 2;
    font-size: 35px;
    font-weight: 400;
}

.collection-image img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    -webkit-user-drag: none;
    user-select: none;
}

.collection-products-wrapper {
    width: 75%;
    border-radius: 10px;
    overflow-y: hidden;
    overflow-x: scroll;
    white-space: normal;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.collection-products-wrapper::-webkit-scrollbar {
    display: none;
}

.collection-products {
    width: max-content;
    height: 100%;
    display: flex;
    justify-content: flex-start;
    gap: 0.5%;
    flex-shrink: 0;
}

.product-card {
    /*height: 45dvh;*/
    height: max-content;
    width: 300px;
    background-color: #f2f2f2;
    overflow: hidden;
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    position: relative;
    padding: 20px 15px;
}

.product-image {
    height: 180px;
    -webkit-user-drag: none;
    user-select: none;
    pointer-events: all;
    padding: 20px;
}

.product-image img {
    border-radius: 10px;
    object-fit: contain;
    -webkit-user-drag: none;
    user-select: none;
    pointer-events: all;
}

.product-card p {
    padding: 0px;
    margin: 0px;
}

.product-information {
    text-align: center;
}

.short_title {
    color: #0d3135;
    font-size: 1.3dvw;
    font-weight: 400;
}

.product-title {
    width: 100%;
    color: #0d3135;
    font-size: 1.05dvw;
    font-weight: 300;
}

.product-title:hover,.short_title:hover {
    color: #0d3135c7;
}

.product-prices {
    font-size: 21px;
    font-weight: bold;
    display: flex;
    justify-content: center;
    padding: 4px 0px;
}

.buttons {
    width: 100%;
    pointer-events: all !important;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    padding-top: 4px;
}


button.buy-now-button {
    all: unset;
    color: #0d3135;
    padding: 6px 30px;
    padding-bottom: 8px;
    background-color: #F7995F;
    border-radius: 999px;
    transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
    cursor: pointer;
    font-weight: 500;
}

button.buy-now-button:hover {
    background-color: rgb(22, 22, 22);
    color: rgb(255, 255, 255);
    scale: 0.90;
}

button.add-to-cart-button:hover {
    background-color: rgb(22, 22, 22);
    color:white;
    height: 14px;
    padding: 8px;
}
button.add-to-cart-button:hover img {
    filter: brightness(0) saturate(100%) invert(100%) sepia(67%) saturate(13%) hue-rotate(242deg) brightness(103%) contrast(104%);
}

.add-to-cart-button {
    all: unset;
    color: #0d3135;
    background-color: #F7995F;
    border-radius: 999px;
    padding: 10px;
    height: 16px;
    font-weight: 500;
    transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
    cursor: pointer;
    align-items: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.saudi-price-holder {
    padding-top: 5px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 10px;
}


/* Responiveness */

@media (max-width: 450px) {
    .featured-collection {
        flex-direction: column;
        gap: 15px;
        width: 90dvw;
    }

    .collection-products-wrapper {
        width: 100%;
        border-radius: 10px;
    }

    .product-information {
        padding-top: 0%;
    }

    .collection-image {
        width: 100%;
        height: auto;
        padding: 15px;
    }

    .collection-image a {
        width: 100%;
    }

    .product-card {
        height: max-content;
        max-height: 500px;
        border-radius: 10px;
        padding: 20px 10px;
    }

    .product-image {
        height: 100px;
        padding: 15px;
    }

    .product-image img {
        border-radius: 10px;
    }

    .short_title {
        font-size: 4.5dvw;
        padding-bottom: 3px;
    }

    .product-title {
        font-size: 15px;
    }

    .product-prices {
        font-size: 20px;
        padding: 5px 0px;
    }

    .buttons {
        padding-top: 3px;
        font-size: 13px;
        gap: 5px;
        bottom: 7px;
        left: -5px;
    }

    button.buy-now-button {
        padding: 5px 15px;
    }
 
    .add-to-cart-button {
        height: 11px;
        padding: 5px;
    }

    .prev_button{
        display: none;
    }
}


/* swiper */

.featured-collection-swiper {
    border-radius: 10px;
}

.swiper {
  width: 100%;
  height: 100%;
}


.swiper-slide {
  width: auto;
  display: flex;
  justify-content: center;
}


@media (max-width: 450px) {
    .swiper-button-prev, .swiper-button-next {
        display: none;
    }
}

